# chip8-emulator

./: Dockerfile
.github/workflows/: docker.yml
chip8_core/: Cargo.toml
chip8_core/src/: lib.rs
desktop/src/: main.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
web/: index.html  index.js  roms.json  styles.css  wasm.js  wasm_bg.wasm
