[package]
name = "wasm"
version = "0.1.0"
edition = "2021"

[dependencies]
chip8_core = {path = "../chip8_core"}
js-sys = "0.3.72"
wasm-bindgen = "^0.2.95"

[dependencies.web-sys]
version = "^0.3.72"
features = [
 "CanvasRenderingContext2d",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "ImageData",
    "KeyboardEvent",
    "Window"
]

[lib]
crate-type = ["cdylib"]


